main code for pre and collection

--- a/K-DMRS.ipynb
+++ b/K-DMRS.ipynb
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -570,7 +570,9 @@
       "Epoch 8/10\n",
       "125002/125002 [==============================] - 734s 6ms/step - loss: 0.6310\n",
       "Epoch 9/10\n",
-      " 18301/125002 [===>..........................] - ETA: 10:39 - loss: 0.6047"
+      "125002/125002 [==============================] - 748s 6ms/step - loss: 0.6220\n",
+      "Epoch 10/10\n",
+      "125002/125002 [==============================] - 745s 6ms/step - loss: 0.6134\n"
      ]
     }
    ],
@@ -579,12 +581,148 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2024-01-25T00:11:03.166232Z",
      "start_time": "2024-01-24T21:03:51.593299Z"
     }
    },
    "id": "f94d90c7ed729e04"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31251/31251 [==============================] - 12s 381us/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "array([[3.043961 ],\n       [3.5991497],\n       [2.1099951],\n       ...,\n       [2.9940906],\n       [2.315012 ],\n       [2.886119 ]], dtype=float32)"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_user_ids = test_data['userId'].values\n",
+    "test_movie_ids = test_data['movieId'].values\n",
+    "test_ratings = test_data['rating'].values\n",
+    "\n",
+    "# Predict ratings for all user-movie pairs in the test set\n",
+    "predicted_ratings = recommender.predict(test_user_ids, test_movie_ids)\n",
+    "predicted_ratings"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-25T00:17:56.729549Z",
+     "start_time": "2024-01-25T00:17:40.125294Z"
+    }
+   },
+   "id": "642b383240807855"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 1.2497418069447142\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "from math import sqrt\n",
+    "\n",
+    "# Calculate RMSE for the test data\n",
+    "rmse = sqrt(mean_squared_error(test_ratings, predicted_ratings))\n",
+    "print(f\"RMSE: {rmse}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-25T00:18:17.630561Z",
+     "start_time": "2024-01-25T00:18:17.580946Z"
+    }
+   },
+   "id": "e6fdaeb8d005a4f9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 1.5618545840254394\n",
+      "Mean Absolute Error: 1.0109232699907518\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
+    "mse = mean_squared_error(test_ratings, predicted_ratings)\n",
+    "mae = mean_absolute_error(test_ratings, predicted_ratings)\n",
+    "\n",
+    "print(f'Mean Squared Error: {mse}')\n",
+    "print(f'Mean Absolute Error: {mae}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-25T00:19:20.985764Z",
+     "start_time": "2024-01-25T00:19:20.936055Z"
+    }
+   },
+   "id": "1b98ff3b8d488a53"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_ratings' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Assuming 'actual_ratings' and 'predicted_ratings' are your arrays of actual and predicted values\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m residuals \u001B[38;5;241m=\u001B[39m \u001B[43mtest_ratings\u001B[49m \u001B[38;5;241m-\u001B[39m predicted_ratings\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[1;32m      6\u001B[0m plt\u001B[38;5;241m.\u001B[39mfigure(figsize\u001B[38;5;241m=\u001B[39m(\u001B[38;5;241m10\u001B[39m, \u001B[38;5;241m6\u001B[39m))\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'test_ratings' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming 'actual_ratings' and 'predicted_ratings' are your arrays of actual and predicted values\n",
+    "residuals = test_ratings - predicted_ratings\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.hist(residuals, bins=30, edgecolor='black')\n",
+    "plt.title('Distribution of Residuals')\n",
+    "plt.xlabel('Residuals')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.show()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-25T00:32:57.635195Z",
+     "start_time": "2024-01-25T00:32:57.543268Z"
+    }
+   },
+   "id": "3fe6381eb3f6ef79"
   },
   {
    "cell_type": "code",
@@ -594,7 +732,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "642b383240807855"
+   "id": "9d783669931fb4e8"
   }
  ],
  "metadata": {
